# myVulkanLearn

./: .gitignore
scratch/: CMakeLists.txt  build.ps1  build.sh  clean_build.sh  command_buffer.cpp  graphics_pipeline_complete.cpp  instance_creation.cpp  logical_device.cpp  open_a_window.cpp  shader_modules.cpp  vulkan_learn.cpp
scratch/CMake/: FindKTX.cmake  FindVulkan.cmake  FindVulkanHpp.cmake  Findnlohmann_json.cmake  Findtinygltf.cmake
scratch/assets/: plant_on_table.mtl
scratch/shaders/: 09_shader_base.frag  09_shader_base.slang  09_shader_base.vert  19_shader_vertexbuffer.slang  22_shader_ubo.slang  shader.slang  shader_fancy.slang  slang.spv
scratch/triangle_src/: command_buffer.cpp  fixed_function.cpp  graphics_pipeline.cpp  graphics_pipeline_complete.cpp  hello_triangle.cpp  hi_triangle.cpp  instance_creation.cpp  logical_device.cpp  main.cpp  open_a_window.cpp  select_physical_device.cpp  shader_modules.cpp  swap_chain.cpp  validation_layers.cpp  window_surface_integration.cpp
